--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "website",
+  "name": "estudiantes--matricula-",
   "version": "1.0.0",
-  "description": "",
+  "description": "CARLOS RAMOS GONZÁLEZ,\r GUSTAVO VEGA,\r JHAN CARLOS RACINE, \r ANDRÉS SAAVEDRA",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.1.8",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0"
+  },
+  "devDependencies": {
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.13"
+    "nodemon": "^3.0.1"
   }
 }
